[package]
name = "solana-tx-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
solana-client = "1.18.14"
solana-sdk = "1.18.14"
solana-transaction-status = "1.18.14"
solana-pubsub-client = "1.18.14"
anyhow = "1.0.86"
futures-util = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
